# Monoxide

./: .gitignore  CMakeLists.txt  LICENSE
examples/: CMakeLists.txt
examples/imgui-example/: CMakeLists.txt
examples/imgui-example/include/window/: ImGuiExampleWindow.h
examples/imgui-example/src/: main.cpp
examples/imgui-example/src/window/: ImGuiExampleWindow.cpp
include/monoxide/graphics/vulkan/core/: Context.h  Device.h  InFlightFrames.h  Instance.h  PhysicalDevice.h  SharedContext.h  Surface.h  Swapchain.h
include/monoxide/graphics/vulkan/debug/: DebugMessenger.h
include/monoxide/graphics/vulkan/memory/: Buffer.h  Image.h  Texture.h
include/monoxide/graphics/vulkan/render/: RecordedCommandBuffer.h
include/monoxide/renderer/: ImGuiRenderer.h
include/monoxide/windowing/: BaseWindow.h  ImGuiWindow.h  VulkanWindow.h  WindowManager.h
src/monoxide/graphics/vulkan/core/: Context.cpp  Device.cpp  InFlightFrames.cpp  Instance.cpp  PhysicalDevice.cpp  SharedContext.cpp  Surface.cpp  Swapchain.cpp
src/monoxide/graphics/vulkan/debug/: DebugMessenger.cpp
src/monoxide/graphics/vulkan/memory/: Buffer.cpp  Image.cpp  Texture.cpp
src/monoxide/graphics/vulkan/render/: RecordedCommandBuffer.cpp
src/monoxide/renderer/: ImGuiRenderer.cpp
src/monoxide/windowing/: BaseWindow.cpp  ImGuiWindow.cpp  VulkanWindow.cpp  WindowManager.cpp
